# python-debpkgr

./: .gitignore  README.rst  TODO  gerritpolicy.yaml  python-debpkgr.spec.in  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
debpkgr/: aptrepo.py  compat.py  compressr.py  constants.py  debpkg.py  errors.py  hasher.py  main.py  signer.py  utils.py
doc/jinja_templates/: makefile.jj2
docs/notes/: create_apt_repo.txt  signing.rst
scripts/: create_apt_repo
src/: cmd_test.py  package_deb.yaml  package_default.yaml  package_foo-0.0.2.yaml  package_foo.yaml  test.py
src/templates/: default
src/templates/deb/default/: foo
src/templates/deb/default/debian/: changelog  control
src/templates/deb/foo/: foo
src/templates/deb/foo-0.0.2/: foo
src/templates/deb/foo-0.0.2/debian/: README.Debian
src/templates/deb/foo/debian/: files  rules
src/templates/default_dir/debian/: copyright  watch
tests/: base.py  test_smoke.py
tests/functional/: compressr_test.py  create_repo_test.py  pkg_test.py  repo_test.py
tests/test_data/: secret-keys.gpg
tests/test_data/dists/stable/: InRelease  Release  Release.gpg
tests/test_data/dists/stable/main/binary-amd64/: Release
tests/test_data/dists/updates/stable/: InRelease  Release  Release.gpg
tests/test_data/dists/updates/stable/main/binary-amd64/: Packages
tests/test_data/dists/updates/stable/main/binary-i386/: Release
tests/test_data/pool/main/f/foo/: foo_0.0.1-1_amd64.deb
tests/unit/: errors_test.py  hasher_test.py  main_test.py  pkg_test.py  repo_test.py  signer_test.py  utils_test.py
