[metadata]
name = python-debpkgr
author = Brett Smith
author-email = bc.smith@sas.com
home-page = https://gitlab.sas.com/bcsmit/debpkgr
summary = "Debian/Ubuntu .deb pkg utils"
description-file = README.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
test-suite = tests

[files]
packages =
    debpkgr

[entry_points]
console_scripts =
    deb_package = debpkgr.main:deb_package
    apt_indexer = debpkgr.main:apt_indexer

[extras]
testing =
    mock:python_version<'3.4'
    pytest
    pytest-cov
development =
    tox~=2.0
    epdb~=0.0
    flake8~=3.0

[flake8]
ignore=E402,E731

[coverage:paths]
source =
    debpkgr
    */site-packages/debpkgr

[coverage:run]
branch = true
parallel = true
source = debpkgr

[coverage:report]
precision = 2
show_missing = true

[bdist_rpm]
requires = python-debian python-six
doc_files = AUTHORS LICENSE ChangeLog README.rst TODO
